Add GET /customers/{customer_id}/cards/{id} paths
