# spec/openapi3.yml
@@ -676,6 +676,53 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /customers/{customer_id}/cards/{id}:
+    get:
+      parameters:
+        - name: customer_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  default_flag:
+                    type: string
+                  card_no:
+                    type: string
+                  expire:
+                    type: string
+                  holder_name:
+                    type: string
+                  card_no_hash:
+                    type: string
+                  created:
+                    type: string
+                    pattern: '^(\d{4})/(\d{2})/(\d{2}) (\d{2}):(\d{2}):(\d{2}).(\d{3})$'
+                  updated:
+                    type: string
+                    pattern: '^(\d{4})/(\d{2})/(\d{2}) (\d{2}):(\d{2}):(\d{2}).(\d{3})$'
+                  type:
+                    type: string
+                  brand:
+                    type: string
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     ErrorResponse:
